--- a/benchmarking_grasp/config/benchmarking.yaml
+++ b/benchmarking_grasp/config/benchmarking.yaml
@@ -2,25 +2,25 @@ only_first: True
 
 experiment_1:
   objects:
-    - pudding_box
-    - apple
+    - bleach_cleanser
+    - flat_screw_driver
   corrected_init_pose:
-    - [0.0, 0.0, 0.0, 0.0, 0.0, -0.45]
+    - [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     - [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
   config:
     center: 0.4
-    r: 0.25
-    alpha: 0.78
+    r: 0.15
+    alpha: 1.57
     n: 1
 
 experiment_2:
   objects:
-    - pudding_box
-    - tennis_ball
-    - mug
-    - apple
-    - banana
-    - bowl
+    - racquet_ball
+    - j_cups
+    - bleach_cleanser
+    - flat_screw_driver
+    - medium_clamp
+    - a_toy_airplane
   corrected_init_pose:
     - [0.0, 0.0, 0.0, 0.0, 0.0, -0.45]
     - [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
