--- a/pick_and_place/package.xml
+++ b/pick_and_place/package.xml
@@ -60,10 +60,13 @@
   <exec_depend>std_msgs</exec_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <gazebo_ros                                                                 
+    gazebo_plugin_path="${prefix}/lib"
+    gazebo_model_path="${prefix}/urdf/objects" /> 
   </export>
 </package>
