--- a/panda_simulation/config/effort_control.yaml
+++ b/panda_simulation/config/effort_control.yaml
@@ -14,8 +14,8 @@
             - panda_joint6
             - panda_joint7
 
-        constraints:
-            goal_time: 2.0
+        # constraints:
+        #     goal_time: 2.0
 
         state_publish_rate: 100
 
@@ -71,11 +71,20 @@
     panda_finger1_controller:
         type: effort_controllers/JointPositionController
         joint: panda_finger_joint1
-        pid: { p: 100000, d: 10.0, i: 0, i_clamp: 1 }
+        pid: { p: 500, d: 1000.0, i: 0, i_clamp: 1 }
     panda_finger2_controller:
         type: effort_controllers/JointPositionController
         joint: panda_finger_joint2
-        pid: { p: 100000, d: 20.0, i: 0, i_clamp: 1 }
+        pid: { p: 500, d: 1000.0, i: 0, i_clamp: 1 }
+
+    # panda_finger1_controller:
+    #     type: effort_controllers/JointPositionController
+    #     joint: panda_finger_joint1
+    #     pid: { p: 100000, d: 10.0, i: 0, i_clamp: 1 }
+    # panda_finger2_controller:
+    #     type: effort_controllers/JointPositionController
+    #     joint: panda_finger_joint2
+    #     pid: { p: 100000, d: 20.0, i: 0, i_clamp: 1 }
 
     # gazebo_ros_control/pid_gains:
     #     panda_joint1: { p: 12000, d: 50, i: 0.0, i_clamp: 10000 }
