--- a/moveit_adapter/CMakeLists.txt
+++ b/moveit_adapter/CMakeLists.txt
@@ -61,6 +61,7 @@ add_service_files(
   FILES
   EndEffectorWaypoint.srv
   GripperCommand.srv
+  CurrentPose.srv
 )
 
 ## Generate actions in the 'action' folder
