added velocity control

--- a/benchmarking_msgs/CMakeLists.txt
+++ b/benchmarking_msgs/CMakeLists.txt
@@ -65,6 +65,7 @@ add_service_files(
   EndEffectorWaypoint.srv
   GripperCommand.srv
   CurrentPose.srv
+  SetJointVelocity.srv
 )
 
 ## Generate actions in the 'action' folder
