--- a/moveit_adapter/CMakeLists.txt
+++ b/moveit_adapter/CMakeLists.txt
@@ -62,6 +62,7 @@ add_service_files(
   EndEffectorWaypoint.srv
   GripperCommand.srv
   CurrentPose.srv
+  SetJointVelocity.srv
 )
 
 ## Generate actions in the 'action' folder
