--- a/benchmarking_grasp/config/configuration.yaml
+++ b/benchmarking_grasp/config/configuration.yaml
@@ -1,33 +1,34 @@
 use_cartesian: false
 over_head: false
-sim_mode: false
+sim_mode: true
 use_depth_completion: false
-enable_crop: true
+enable_crop: false
 align_depth: true
 crop_by_pixel: true
+point_cloud_input: false
 
-gripper_offset: 0.09
+gripper_offset: 0.08
 intermediate_z_stop: 0.5
-scan_pose: [0.45, 0.0, 0.7, 0.0, 3.14, 3.14]
-bad_grasp_z: 0.12                                   # if grasp is below this point, don't execute
-# crop_size: [0.195, 0.239, 0.87, 0.86]                    
-crop_size: [170, 355, 660, 1121]                    
+scan_pose: [0.45, 0.0, 0.7, 0.0, 3.14, 3.14]        # scan_pose: [0.0, 0.45, 0.7, 0.0, 3.14, 3.14]
+bad_grasp_z: 0.0                                    # if grasp is below this point, don't execute                    
+crop_size: [170, 355, 660, 1121]                    # crop_size: [0.195, 0.239, 0.87, 0.86]
 
 # robot control params
-robot_default_velocity: 0.2                         # As a fraction of the maximum joint velocity
-robot_approach_velocity: 0.1 
+robot_default_velocity: 1                           # As a fraction of the maximum joint velocity
+robot_approach_velocity: 0.5 
 
+record_video: false
 camera_name: "/dev/v4l/by-id/usb-046d_HD_Pro_Webcam_C920_D03ADC1F-video-index0"
 
 # folder names
 urdf_package_name: 'pick_and_place'                 # <urdf_package_name>/urdf/objects    
 
-# frames
+# coordinate frames
 base_frame: 'panda_link0'
 camera_frame_sim: 'panda_camera_optical_link'
 camera_frame: 'camera_depth_optical_frame'
 
-# topics
+# ROS topics
 grasp_in_image_frame: "grasp_service/predict"
 grasp_in_camera_frame: "coords_in_cam"
 grasp_in_world_frame: "predict"
@@ -36,8 +37,7 @@ cam_info_sim: '/panda_camera/rgb/camera_info'
 depth_image_sim: '/panda_camera/depth/image_raw'
 rgb_image_sim: '/panda_camera/rgb/image_raw'
 
-cam_info: '/camera/aligned_depth_to_color/camera_info'
-# cam_info: '/camera/depth/camera_info'
+cam_info: '/camera/aligned_depth_to_color/camera_info'      # cam_info: '/camera/depth/camera_info'
 depth_wo_align_image: '/camera/depth/image_rect_raw'
 depth_image: '/camera/aligned_depth_to_color/image_raw'
 rgb_image: '/camera/color/image_raw'
