angle issue resolved

--- a/benchmarking_grasp/config/configuration.yaml
+++ b/benchmarking_grasp/config/configuration.yaml
@@ -12,6 +12,7 @@ intermediate_z_stop: 0.5
 scan_pose: [0.45, 0.0, 0.7, 0.0, 3.14, 3.14]        # scan_pose: [0.0, 0.45, 0.7, 0.0, 3.14, 3.14]
 bad_grasp_z: 0.0                                    # if grasp is below this point, don't execute                    
 crop_size: [170, 355, 660, 1121]                    # crop_size: [0.195, 0.239, 0.87, 0.86]
+grasp_angle_offset: 1.57
 
 # robot control params
 robot_default_velocity: 1                           # As a fraction of the maximum joint velocity
