--- a/benchmarking_grasp/config/configuration.yaml
+++ b/benchmarking_grasp/config/configuration.yaml
@@ -1,3 +1,4 @@
+# gripper/camera params
 use_cartesian: false
 over_head: false
 sim_mode: false
@@ -8,7 +9,7 @@ crop_by_pixel: true
 point_cloud_input: false
 remove_noisy_ground_plane: true
 
-gripper_offset: 0.09
+gripper_offset: 0.11
 intermediate_z_stop: 0.5
 scan_pose: [0.45, 0.0, 0.8, 0.0, 3.14, 3.14]        # scan_pose: [0.0, 0.45, 0.7, 0.0, 3.14, 3.14]
 bad_grasp_z: 0.1                                    # if grasp is below this point, don't execute                    
