changed pitch, grasp angle finding

--- a/benchmarking_grasp/config/configuration.yaml
+++ b/benchmarking_grasp/config/configuration.yaml
@@ -9,16 +9,16 @@ crop_by_pixel: true
 point_cloud_input: false
 remove_noisy_ground_plane: true
 
-gripper_offset: 0.11
+gripper_offset: 0.105
 intermediate_z_stop: 0.5
-scan_pose: [0.45, 0.0, 0.8, 0.0, 3.14, 3.14]        # scan_pose: [0.0, 0.45, 0.7, 0.0, 3.14, 3.14]
+scan_pose: [0.45, 0.0, 0.8, 3.14, 0, 0]        # scan_pose: [0.0, 0.45, 0.7, 0.0, 3.14, 3.14]
 bad_grasp_z: 0.1                                    # if grasp is below this point, don't execute                    
-crop_size: [190, 375, 640, 1091]                    # crop_size: [0.195, 0.239, 0.87, 0.86]
+crop_size: [190, 375, 650, 1081]                    # crop_size: [0.195, 0.239, 0.87, 0.86]
 grasp_angle_offset: 1.57
 
 # robot control params
-robot_default_velocity: 1                           # As a fraction of the maximum joint velocity
-robot_approach_velocity: 0.5 
+robot_default_velocity: 0.2                           # As a fraction of the maximum joint velocity (TODO)
+robot_approach_velocity: 0.05 
 
 record_video: false
 camera_name: "/dev/v4l/by-id/usb-046d_HD_Pro_Webcam_C920_D03ADC1F-video-index0"
