working pointcloud ROI

--- a/benchmarking_grasp/CMakeLists.txt
+++ b/benchmarking_grasp/CMakeLists.txt
@@ -128,6 +128,7 @@ include_directories(
 # include
 ${catkin_INCLUDE_DIRS}
 ${PCL_INCLUDE_DIRS}
+${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -161,7 +162,7 @@ ${PCL_INCLUDE_DIRS}
 # )
 
 add_executable(get_point_cloud_roi scripts/get_point_cloud_roi.cpp)
-target_link_libraries(get_point_cloud_roi ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+target_link_libraries(get_point_cloud_roi ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBS})
 
 #############
 ## Install ##
