--- a/benchmarking_grasp/config/benchmarking.yaml
+++ b/benchmarking_grasp/config/benchmarking.yaml
@@ -6,9 +6,9 @@ experiment_1:
     - 065-j_cups
     - 044_flat_screwdriver
     - 006_mustard_bottle
-    - 049_small_clamp
     - 050_medium_clamp
     - 051_large_clamp
+    - 052_extra_large_clamp
     - 011_banana
     - 012_strawberry
     - 016_pear
