--- a/benchmarking_grasp/config/configuration.yaml
+++ b/benchmarking_grasp/config/configuration.yaml
@@ -9,15 +9,17 @@ angle_2d_in_cam_frame: false
 # gripper/robot params
 gripper_offset: 0.105
 intermediate_z_stop: 0.5
-scan_pose: [0.45, 0.0, 0.7, 3.14, 0.03, 0]           # scan_pose: [0.0, 0.45, 0.7, 0.0, 3.14, 3.14]
+scan_pose: [0.45, 0.0, 0.8, 3.14, 0.03, 0]           # scan_pose: [0.0, 0.45, 0.7, 0.0, 3.14, 3.14]
 bad_grasp_z: 0.1                                    # if grasp is below this point, don't execute                    
 grasp_angle_offset: 1.57
+x_offset_world: 0.0
+y_offset_world: 0.01
 gripper_width: 0.08
 gripper_height: 0.04
 
 # camera params
-depth_crop_size: [59, 101, 416, 630]                # crop_size: [y_min, x_min, y_max, x_max]
-pc_roi: [0.0, -0.22, -0.36, 0.7, 0.22, 0.36]        # pc_roi: [z_min, y_min, x_min, z_max, y_max, x_max]
+depth_crop_size: [8, 317, 710, 1179]                # crop_size: [y_min, x_min, y_max, x_max]
+pc_roi: [-1, -0.24, -0.3, 1, 0.28, 0.36]        # pc_roi: [z_min, y_min, x_min, z_max, y_max, x_max]
 
 # robot control params
 robot_default_velocity: 0.1                         # As a fraction of the maximum joint velocity 
