--- a/benchmarking_grasp/config/configuration.yaml
+++ b/benchmarking_grasp/config/configuration.yaml
@@ -5,6 +5,7 @@ enable_crop: true
 crop_by_pixel: true
 remove_noisy_ground_plane: true
 angle_2d_in_cam_frame: false
+enable_benchmark_test: true
 
 # gripper/robot params
 gripper_offset: 0.105
