--- a/benchmarking_msgs/CMakeLists.txt
+++ b/benchmarking_msgs/CMakeLists.txt
@@ -66,6 +66,7 @@ add_service_files(
   GripperCommand.srv
   CurrentPose.srv
   SetJointVelocity.srv
+  MoveJointRelative.srv
 )
 
 ## Generate actions in the 'action' folder
