--- a/moveit_adapter/CMakeLists.txt
+++ b/moveit_adapter/CMakeLists.txt
@@ -64,6 +64,7 @@ add_service_files(
   CurrentPose.srv
   SetJointVelocity.srv
   StopMovement.srv
+  MoveJointRelative.srv
 )
 
 ## Generate actions in the 'action' folder
