--- a/benchmarking_grasp/config/configuration.yaml
+++ b/benchmarking_grasp/config/configuration.yaml
@@ -1,11 +1,11 @@
 # enable/disable features
-use_cartesian: false
+use_cartesian: true
 over_head: false
 enable_crop: true
 crop_by_pixel: true
-remove_noisy_ground_plane: true
+remove_noisy_ground_plane: false
 angle_2d_in_cam_frame: false
-enable_benchmark_test: true
+enable_benchmark_test: false
 
 # gripper/robot params
 gripper_offset: 0.105
@@ -15,11 +15,11 @@ bad_grasp_z: 0.1                                    # if grasp is below this poi
 grasp_angle_offset: 1.57
 x_offset_world: 0.0
 y_offset_world: 0.0
-gripper_width: 0.08
+gripper_width: 0.09
 gripper_height: 0.04
 
 # camera params
-depth_crop_size: [76, 262, 455, 656]                # crop_size: [y_min, x_min, y_max, x_max]
+depth_crop_size: [17, 17, 1003, 1013]                # crop_size: [y_min, x_min, y_max, x_max]
 pc_roi: [-1, -0.24, -0.3, 1, 0.28, 0.36]        # pc_roi: [z_min, y_min, x_min, z_max, y_max, x_max]
 
 # robot control params
